7960
I indeed found that removing 'with This' in
```
type OpSemExp <: LazyExp[OpSemExp] with This
```
into
```
type OpSemExp <: LazyExp[OpSemExp]
```
did make the error go away and then projecting on Val is possible.
but it probably means something else.

But is the type selection volatile because of type erasure?
Then the workaround would be to put a typetag somewhere.

Only this
```
trait LazyExp[+This <: LazyExp[This]: TypeTag] 
```
is not allowed.
```
scala> trait LazyExp[+This <: LazyExp[This]: TypeTag]
<console>:1: error: traits cannot have type parameters with context bounds `: ..
.' nor view bounds `<% ...'
       trait LazyExp[+This <: LazyExp[This]: TypeTag]
                                                      ^
```

Probably the type parameter This is volatile because of type erasure.

Maybe macros?
